--- a/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
+++ b/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
@@ -3,11 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.anychart.AnyChartView
-        android:id="@+id/entityRatioChart"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:orientation="vertical">
+        <CheckBox
+            android:id="@+id/filterActualCheckbox"
+            android:text="@string/filter_actual_title"
+            android:layout_gravity="end"
+            android:paddingEnd="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <com.anychart.AnyChartView
+            android:id="@+id/entityRatioChart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </LinearLayout>
     <TextView
         android:id="@+id/noDataTv"
         android:layout_width="wrap_content"
